Forgot to show median estimates

--- a/homework/ZacharyStone/HW3/hw03_total.ipynb
+++ b/homework/ZacharyStone/HW3/hw03_total.ipynb
@@ -614,6 +614,111 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76040b37",
+   "metadata": {},
+   "source": [
+    "### Median parameter estimates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "0c6f876f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><i>Table length=8</i>\n",
+       "<table id=\"table140126431981968\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>object</th><th>band</th><th>A</th><th>beta</th><th>t0</th><th>gamma</th><th>t_rise</th><th>t_fall</th><th>c</th></tr></thead>\n",
+       "<thead><tr><th>int64</th><th>str1</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
+       "<tr><td>0</td><td>g</td><td>1229.485</td><td>-2.794</td><td>55201.854</td><td>0.446</td><td>1.350</td><td>27.515</td><td>4.918</td></tr>\n",
+       "<tr><td>0</td><td>r</td><td>932.993</td><td>-2.880</td><td>55199.076</td><td>23.652</td><td>1.605</td><td>51.378</td><td>-18.290</td></tr>\n",
+       "<tr><td>0</td><td>i</td><td>930.367</td><td>-4.138</td><td>55201.919</td><td>78.993</td><td>0.725</td><td>29.006</td><td>-12.078</td></tr>\n",
+       "<tr><td>0</td><td>z</td><td>810.073</td><td>-4.297</td><td>55201.043</td><td>95.126</td><td>1.514</td><td>18.840</td><td>11.764</td></tr>\n",
+       "<tr><td>1</td><td>g</td><td>265.419</td><td>-0.927</td><td>55206.021</td><td>13.604</td><td>3.047</td><td>9.163</td><td>4.601</td></tr>\n",
+       "<tr><td>1</td><td>r</td><td>392.893</td><td>-0.989</td><td>55209.532</td><td>5.274</td><td>4.534</td><td>19.433</td><td>4.421</td></tr>\n",
+       "<tr><td>1</td><td>i</td><td>440.098</td><td>-1.074</td><td>55209.764</td><td>5.360</td><td>4.802</td><td>24.539</td><td>1.511</td></tr>\n",
+       "<tr><td>1</td><td>z</td><td>289.313</td><td>-0.787</td><td>55206.855</td><td>3.803</td><td>4.140</td><td>33.809</td><td>8.870</td></tr>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "<Table length=8>\n",
+       "object band    A       beta      t0     gamma   t_rise  t_fall    c   \n",
+       "int64  str1 float64  float64  float64  float64 float64 float64 float64\n",
+       "------ ---- -------- ------- --------- ------- ------- ------- -------\n",
+       "     0    g 1229.485  -2.794 55201.854   0.446   1.350  27.515   4.918\n",
+       "     0    r  932.993  -2.880 55199.076  23.652   1.605  51.378 -18.290\n",
+       "     0    i  930.367  -4.138 55201.919  78.993   0.725  29.006 -12.078\n",
+       "     0    z  810.073  -4.297 55201.043  95.126   1.514  18.840  11.764\n",
+       "     1    g  265.419  -0.927 55206.021  13.604   3.047   9.163   4.601\n",
+       "     1    r  392.893  -0.989 55209.532   5.274   4.534  19.433   4.421\n",
+       "     1    i  440.098  -1.074 55209.764   5.360   4.802  24.539   1.511\n",
+       "     1    z  289.313  -0.787 55206.855   3.803   4.140  33.809   8.870"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "band_col = []\n",
+    "obj_col = []\n",
+    "a_col = []\n",
+    "beta_col = []\n",
+    "t0_col = []\n",
+    "gamma_col = []\n",
+    "t_rise_col = []\n",
+    "t_fall_col = []\n",
+    "c_col = []\n",
+    "\n",
+    "for j in range(2):\n",
+    "    samples_i = all_samplers[j].get_chain().copy()\n",
+    "    samples_i = samples_i[nburn:,:,:].reshape(-1, samples_i.shape[2])\n",
+    "    \n",
+    "    for i, band in enumerate('griz'):\n",
+    "        \n",
+    "        band_col.append(band)\n",
+    "        obj_col.append(j)\n",
+    "        \n",
+    "        m = 7*i\n",
+    "        \n",
+    "        a_col.append( np.median(samples_i[:,m]) )\n",
+    "        beta_col.append( np.median(samples_i[:,m+1]) )\n",
+    "        t0_col.append( np.median(samples_i[:,m+2]) )\n",
+    "        gamma_col.append( np.median(samples_i[:,m+3]) )\n",
+    "        t_rise_col.append( np.median(samples_i[:,m+4]) )\n",
+    "        t_fall_col.append( np.median(samples_i[:,m+5]) )\n",
+    "        c_col.append( np.median(samples_i[:,m+6]) )\n",
+    "        \n",
+    "\n",
+    "\n",
+    "res_table = Table()\n",
+    "\n",
+    "res_table['object'] = obj_col\n",
+    "res_table['band'] = band_col\n",
+    "res_table['A'] = a_col\n",
+    "res_table['beta'] = beta_col\n",
+    "res_table['t0'] = t0_col\n",
+    "res_table['gamma'] = gamma_col\n",
+    "res_table['t_rise'] = t_rise_col\n",
+    "res_table['t_fall'] = t_fall_col\n",
+    "res_table['c'] = c_col\n",
+    "\n",
+    "\n",
+    "for col in res_table.colnames:\n",
+    "    if (col == 'object') or (col == 'band'):\n",
+    "        continue\n",
+    "        \n",
+    "    res_table[col].format = '.3f'\n",
+    "\n",
+    "res_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "11e0935f",
    "metadata": {},
    "source": [
