--- a/homework/05/hw05.ipynb
+++ b/homework/05/hw05.ipynb
@@ -17,10 +17,10 @@
     "\n",
     "<img src=\"Transiting-Exoplanet-Light-Curve.gif\">\n",
     "\n",
-    "### You get to find 3 exoplanets in the Kepler-90 system with `gatspy`. \n",
+    "### You get to find 3 exoplanets in the Kepler-90 system with the techniques in class. \n",
     "\n",
     "\n",
-    "### To get the Kepler data, you'll need the `lightkurve` package\n",
+    "### To get and analyze the Kepler data, you'll need the `lightkurve` package\n",
     "\n",
     "> `python -m pip install lightkurve --upgrade`\n",
     "\n",
