update week08 ntbk

--- a/notes/08/week08_p2.ipynb
+++ b/notes/08/week08_p2.ipynb
@@ -57,34 +57,6 @@
     }
    },
    "source": [
-    "# <center> Midterm solutions posted </center>\n",
-    "\n",
-    "\n",
-    "### <center> Policy Updates from the University </center>\n",
-    "<center> The deadline to drop a full-semester course is now April 30. </center>\n",
-    "\n",
-    "<center> Students may select to take any course as credit/no-credit (CR/NC).</center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### <center> Quick Review of Midterm </center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "## Recap\n",
     "\n",
     "- Measurements  we looked at in the first half of this semester were all independent and identically distributed (i.i.d) \n",
@@ -255,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1225,19 +1197,19 @@
     "\n",
     "\n",
     "betaRed = 2  # Complete\n",
-    "betaPink = 1  # Complete\n",
-    "betaWhite = 0  # Complete\n",
+    "betaPink =   # Complete\n",
+    "betaWhite =   # Complete\n",
     "\n",
     "t = dt * np.arange(N)\n",
     "yRed = generate_power_law(N, dt, betaRed)\n",
-    "yPink = generate_power_law(N, dt, betaPink) # Complete\n",
-    "yWhite = generate_power_law(N, dt, betaWhite)/10.0 # Complete\n",
+    "yPink =  # Complete\n",
+    "yWhite = /10.0 # Complete\n",
     "\n",
     "\n",
     "\n",
-    "fRed, PSDred = PSD_continuous(t, yRed)   # Complete\n",
-    "fPink, PSDpink = PSD_continuous(t, yPink)       # Complete\n",
-    "fWhite, PSDwhite = PSD_continuous(t, yWhite)    # Complete\n",
+    "fRed, PSDred = PSD_continuous(t, yRed)   \n",
+    "fPink, PSDpink =        # Complete\n",
+    "fWhite, PSDwhite =      # Complete\n",
     "  "
    ]
   },
