--- a/homework/MaggieVerrico/06/mverrico_HW06+7.ipynb
+++ b/homework/MaggieVerrico/06/mverrico_HW06+7.ipynb
@@ -180,17 +180,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 't' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[53], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m     model\u001b[38;5;241m.\u001b[39mcompute(t,yerr)\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m t,yerr\n\u001b[0;32m---> 14\u001b[0m \u001b[43mgenerate_model\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[53], line 11\u001b[0m, in \u001b[0;36mgenerate_model\u001b[0;34m(m, c1, c2, c3, A, lamb, gamma, P, ndim)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgenerate_model\u001b[39m(m, c1, c2, c3, A, lamb, gamma, P, ndim):\n\u001b[1;32m     10\u001b[0m     model \u001b[38;5;241m=\u001b[39m george\u001b[38;5;241m.\u001b[39mGP(A\u001b[38;5;241m*\u001b[39mProduct(ExpSquaredKernel(metric\u001b[38;5;241m=\u001b[39mlamb,ndim\u001b[38;5;241m=\u001b[39mndim),ExpSine2Kernel(gamma,np\u001b[38;5;241m.\u001b[39mlog10(P),ndim\u001b[38;5;241m=\u001b[39mndim)))\n\u001b[0;32m---> 11\u001b[0m     model\u001b[38;5;241m.\u001b[39mcompute(\u001b[43mt\u001b[49m,yerr)\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m t,yerr\n",
+      "\u001b[0;31mNameError\u001b[0m: name 't' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from george.kernels import ExpSine2Kernel, ExpSquaredKernel, Product\n",
+    "from george.modeling import Model\n",
+    "import george\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "#ndim = 8\n",
     "\n",
-    "def kernel_product(A,gamma,P,lamb,ndim):\n",
-    "    return A*Product(ExpSquaredKernel(ndim),ExpSine2Kernel(gamma,np.log10(P),ndim=ndim)**(2/lamb))  \n",
-    "\n"
+    "def generate_model(m, c1, c2, c3, A, lamb, gamma, P, ndim):\n",
+    "    model = george.GP(A*Product(ExpSquaredKernel(metric=lamb,ndim=ndim),ExpSine2Kernel(gamma,np.log10(P),ndim=ndim)))\n",
+    "    model.compute(t,yerr)\n",
+    "    return t,yerr\n",
+    "\n",
+    "generate_model(1,1,1,1,1,1,1,1,1)"
    ]
   },
   {
@@ -203,12 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Initialize model\n",
     "\n",
-    "\n"
+    "def lnprob(params):\n",
+    "    ypred = generate_model(params)\n",
+    "    ln_like = (ypred-t['flux'])**2/np.std(t['flux'])\n",
+    "    return ln_like + ln_prior(params) "
    ]
   },
   {
@@ -220,20 +244,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Set priors\n",
     "\n",
-    "m_prior =  np.random.normal(loc=5200,scale=100) ## normalized flux\n",
-    "c1_prior = np.random.normal(loc=625,scale=20) ## c1, c2, c3 are starts of each higher fluctuation \n",
-    "c2_prior = np.random.normal(loc=730,scale=20) ## in time\n",
-    "c3_prior = np.random.normal(loc=800,scale=20)\n",
-    "A_prior = np.random.uniform(low=0,high=200) ## amplitude of exponential\n",
-    "gamma_prior = np.random.uniform(low=0,high=200) ## amplitude of sin wave\n",
-    "P_prior = np.random.uniform(low=0,high=25) ## period of sin wave\n",
-    "lambda_prior = np.random.uniform(low=0,high=100)  ## period of total fluctuation"
+    "def ln_prior(params):\n",
+    "    \n",
+    "    m, c1, c2, c3, A, gamma, P, lamb = params\n",
+    "    \n",
+    "    ## Cannot subtract off more/less than max/min flux\n",
+    "    \n",
+    "    if (m>np.max(t['flux'])) or (m<np.min(t['flux'])):\n",
+    "        return -np.inf\n",
+    "    \n",
+    "    ## Start of waves should be within the time that we are looking at\n",
+    "    \n",
+    "    if (c1>np.max(t['time'])) or (c1<np.min(t['time'])) or \\\n",
+    "    (c2>np.max(t['time'])) or (c2<np.min(t['time'])) or \\\n",
+    "    (c3>np.max(t['time'])) or (c3<np.min(t['time'])):\n",
+    "        return -np.inf\n",
+    "    \n",
+    "    ## Amplitude of exp can be positive or negative; amplitude of sin should be positive.\n",
+    "    ## Neither should exceed the difference between the max and min flux in the sample\n",
+    "    \n",
+    "    if (A>(np.max(t['flux'])-np.min(t['flux']))) or (A<(-np.max(t['flux'])+np.min(t['flux']))) \\\n",
+    "    or (gamma>(np.max(t['flux'])-np.min(t['flux']))) or (gamma<0):\n",
+    "        return -np.inf\n",
+    "    \n",
+    "    ## Period should be within the time frame we're looking at and should be positive\n",
+    "    \n",
+    "    if (P>(np.max(t['time']-np.min(t['time'])))) or (P<=0) or \\\n",
+    "    (lamb>(np.max(t['time']-np.min(t['time'])))) or (lamb<=0):\n",
+    "        return -np.inf\n",
+    "    \n",
+    "    ## Distributions\n",
+    "    \n",
+    "    else:\n",
+    "\n",
+    "        m_prior =  np.random.normal(loc=5200,scale=100) ## normalized flux\n",
+    "        c1_prior = np.random.normal(loc=625,scale=20) ## c1, c2, c3 are starts of each higher fluctuation \n",
+    "        c2_prior = np.random.normal(loc=730,scale=20) ## in time\n",
+    "        c3_prior = np.random.normal(loc=800,scale=20)\n",
+    "        A_prior = np.random.uniform(low=-200,high=200) ## amplitude of exponential\n",
+    "        gamma_prior = np.random.uniform(low=0,high=200) ## amplitude of sin wave\n",
+    "        P_prior = np.random.uniform(low=0,high=25) ## period of sin wave\n",
+    "        lambda_prior = np.random.uniform(low=0,high=100)  ## period of total fluctuation\n",
+    "        \n",
+    "        return m_prior*c1_prior*c2_prior*c3_prior*A_prior*gamma_prior*P_prior*lambda_prior"
    ]
   },
   {
@@ -247,10 +306,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running burn-in...\n",
+      "emcee: Exception while calling your likelihood function:\n",
+      "  params: [5199.99999999  624.99999999  724.99999999  800.           10.00000002\n",
+      "   50.           24.99999999   99.99999999]\n",
+      "  args: []\n",
+      "  kwargs: {}\n",
+      "  exception:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/meverri/anaconda3/envs/fds/lib/python3.10/site-packages/emcee/ensemble.py\", line 624, in __call__\n",
+      "    return self.f(x, *self.args, **self.kwargs)\n",
+      "  File \"/tmp/ipykernel_19754/1669330453.py\", line 4, in lnprob\n",
+      "    ypred = generate_model(params)\n",
+      "TypeError: generate_model() missing 8 required positional arguments: 'c1', 'c2', 'c3', 'A', 'lamb', 'gamma', 'P', and 'ndim'\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "generate_model() missing 8 required positional arguments: 'c1', 'c2', 'c3', 'A', 'lamb', 'gamma', 'P', and 'ndim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[51], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m sampler \u001b[38;5;241m=\u001b[39m emcee\u001b[38;5;241m.\u001b[39mEnsembleSampler(nwalkers, ndim, lnprob)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRunning burn-in...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m p0, _, _ \u001b[38;5;241m=\u001b[39m \u001b[43msampler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_mcmc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mp0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m500\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m sampler\u001b[38;5;241m.\u001b[39mreset()\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRunning production...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/fds/lib/python3.10/site-packages/emcee/ensemble.py:443\u001b[0m, in \u001b[0;36mEnsembleSampler.run_mcmc\u001b[0;34m(self, initial_state, nsteps, **kwargs)\u001b[0m\n\u001b[1;32m    440\u001b[0m     initial_state \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_previous_state\n\u001b[1;32m    442\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m--> 443\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m results \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msample(initial_state, iterations\u001b[38;5;241m=\u001b[39mnsteps, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    444\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m    446\u001b[0m \u001b[38;5;66;03m# Store so that the ``initial_state=None`` case will work\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/fds/lib/python3.10/site-packages/emcee/ensemble.py:344\u001b[0m, in \u001b[0;36mEnsembleSampler.sample\u001b[0;34m(self, initial_state, log_prob0, rstate0, blobs0, iterations, tune, skip_initial_state_check, thin_by, thin, store, progress, progress_kwargs)\u001b[0m\n\u001b[1;32m    342\u001b[0m     state\u001b[38;5;241m.\u001b[39mblobs \u001b[38;5;241m=\u001b[39m blobs0\n\u001b[1;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m state\u001b[38;5;241m.\u001b[39mlog_prob \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 344\u001b[0m     state\u001b[38;5;241m.\u001b[39mlog_prob, state\u001b[38;5;241m.\u001b[39mblobs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute_log_prob\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoords\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    345\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m np\u001b[38;5;241m.\u001b[39mshape(state\u001b[38;5;241m.\u001b[39mlog_prob) \u001b[38;5;241m!=\u001b[39m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnwalkers,):\n\u001b[1;32m    346\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mincompatible input dimensions\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/fds/lib/python3.10/site-packages/emcee/ensemble.py:489\u001b[0m, in \u001b[0;36mEnsembleSampler.compute_log_prob\u001b[0;34m(self, coords)\u001b[0m\n\u001b[1;32m    487\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    488\u001b[0m         map_func \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmap\u001b[39m\n\u001b[0;32m--> 489\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmap_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlog_prob_fn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    491\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    492\u001b[0m     log_prob \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;28mfloat\u001b[39m(l[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m results])\n",
+      "File \u001b[0;32m~/anaconda3/envs/fds/lib/python3.10/site-packages/emcee/ensemble.py:624\u001b[0m, in \u001b[0;36m_FunctionWrapper.__call__\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    622\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, x):\n\u001b[1;32m    623\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 624\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    625\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m:  \u001b[38;5;66;03m# pragma: no cover\u001b[39;00m\n\u001b[1;32m    626\u001b[0m         \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtraceback\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[49], line 4\u001b[0m, in \u001b[0;36mlnprob\u001b[0;34m(params)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlnprob\u001b[39m(params):\n\u001b[0;32m----> 4\u001b[0m     ypred \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     ln_like \u001b[38;5;241m=\u001b[39m (ypred\u001b[38;5;241m-\u001b[39mt[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mflux\u001b[39m\u001b[38;5;124m'\u001b[39m])\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m/\u001b[39mnp\u001b[38;5;241m.\u001b[39mstd(t[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mflux\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ln_like \u001b[38;5;241m+\u001b[39m ln_prior(params)\n",
+      "\u001b[0;31mTypeError\u001b[0m: generate_model() missing 8 required positional arguments: 'c1', 'c2', 'c3', 'A', 'lamb', 'gamma', 'P', and 'ndim'"
+     ]
+    }
+   ],
+   "source": [
+    "import emcee\n",
+    "\n",
+    "initial = np.array([5200,625,725,800,10,50,25,100])\n",
+    "ndim, nwalkers = len(initial), 10\n",
+    "p0 = initial + 1e-8 * np.random.randn(nwalkers, ndim)\n",
+    "sampler = emcee.EnsembleSampler(nwalkers, ndim, lnprob)\n",
+    "\n",
+    "print(\"Running burn-in...\")\n",
+    "p0, _, _ = sampler.run_mcmc(p0, 500)\n",
+    "sampler.reset()\n",
+    "\n",
+    "print(\"Running production...\")\n",
+    "sampler.run_mcmc(p0, 1000);"
+   ]
   },
   {
    "cell_type": "markdown",
