--- a/homework/CameronTrimborn/06/HW06+7.ipynb
+++ b/homework/CameronTrimborn/06/HW06+7.ipynb
@@ -529,6 +529,8 @@
     "#reconstruct best performing forest\n",
     "best_nest = n_estimators[np.argmax(boobs)]\n",
     "print(best_nest)\n",
+    "#for some reason the prediction step crashes my python kernel if I use n=500\n",
+    "# so I switched it to n=200 which works perfectly fine\n",
     "best_forest= sklearn.ensemble.RandomForestRegressor(n_estimators=200, n_jobs=-1, max_features='sqrt', \n",
     "                                             oob_score=True, random_state=42)\n",
     "x = train_pd[train_cols]\n",
