Forgot to comment about issue with Q8

--- a/homework/CameronTrimborn/06/HW06+7.ipynb
+++ b/homework/CameronTrimborn/06/HW06+7.ipynb
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,22 +1337,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#filter zphot_reliable==True\n",
-    "mask_train = (train_data['zphot_reliable']==True) #&\\\n",
-    "                            #(train_data['z'] >= 0) &\\\n",
-    "                             #       (train_data['zphot'] >=0)\n",
-    "mask_test = (test_data['zphot_reliable']==True) #&\\\n",
-    "                            #(test_data['z'] >= 0) &\\\n",
-    "                             #       (test_data['zphot'] >=0)"
+    "mask_train = (train_data['zphot_reliable']==True) &\\\n",
+    "                            (train_data['z'] >= 0) &\\\n",
+    "                                (train_data['zphot'] >=0)\n",
+    "mask_test = (test_data['zphot_reliable']==True) &\\\n",
+    "                            (test_data['z'] >= 0) &\\\n",
+    "                                    (test_data['zphot'] >=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1500,7 @@
     "n_estimators = [5,20,50,200,500]\n",
     "train_pd = train_data.to_pandas().dropna() #need to convert to pd due to issues with forest, and remove nans\n",
     "\n",
-    "boobs = [] #I'm sorry I had to...\n",
+    "boob_score = [] #I'm sorry I had to...\n",
     "f_importance = []\n",
     "for n in n_estimators:\n",
     "    forest = sklearn.ensemble.RandomForestRegressor(n_estimators=n, n_jobs=-1, max_features='sqrt', \n",
@@ -1509,14 +1509,14 @@
     "    y = train_pd[pred_cols]#prediction\n",
     "    weights = train_pd['zErr']**-2 #inverse variance\n",
     "    forest.fit(x, y, weights)\n",
-    "    boobs.append(forest.oob_score_)\n",
+    "    boob_score.append(forest.oob_score_)\n",
     "    f_importance.append(forest.feature_importances_)\n",
     "    print('n_estimators =',n, 'completed')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
     "plt.figure(layout='tight',figsize=(7,14))\n",
     "for i in range(len(n_estimators)):\n",
     "    plt.subplot(511+i)\n",
-    "    plt.title(f'n_estimators = {n_estimators[i]}')\n",
+    "    plt.title('n_estimators = {}'.format(n_estimators[i]))\n",
     "    plt.xlabel('Feature Importance')\n",
     "    for j in range(len(train_cols)):\n",
     "        plt.barh(train_cols[j],f_importance[i][j],height=1,color='purple',edgecolor = 'k',alpha=0.9)"
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1551,7 @@
        "Text(0.5, 0, '# of Branches')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1567,7 +1567,7 @@
     }
    ],
    "source": [
-    "plt.plot(n_estimators,boobs)\n",
+    "plt.plot(n_estimators,boob_score)\n",
     "plt.xlabel('# of Branches')"
    ]
   },
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1595,7 @@
    ],
    "source": [
     "#reconstruct best performing forest\n",
-    "best_nest = n_estimators[np.argmax(boobs)]\n",
+    "best_nest = n_estimators[np.argmax(boob_score)]\n",
     "print(best_nest)\n",
     "#for some reason the prediction step crashes my python kernel if I use n=500\n",
     "# so I switched it to n=200 which works perfectly fine\n",
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1673,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
